force-app/main/default/objects/Factory_Approvals__c/Factory_Approvals__c.object-meta.xml
<CustomObject>
    <label>Factory Approval</label>
    <nameField>
        <displayFormat>FA-{000000}</displayFormat>
        <label>Factory Approvals Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Factory Approval List</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>