force-app/main/default/objects/Factory_Approvals__c/fields/Ceiling_Price__c.field-meta.xml
<CustomField>
    <fullName>Ceiling_Price__c</fullName>
    <label>Ceiling Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>