force-app/main/default/objects/Factory_Approvals__c/fields/Consumer__c.field-meta.xml
<CustomField>
    <fullName>Consumer__c</fullName>
    <label>Consumer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Factory Approval List</relationshipLabel>
    <relationshipName>Factory_Approval_List</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>