force-app/main/default/objects/Factory_Approvals__c/fields/Factory_Approval__c.field-meta.xml
<CustomField>
    <fullName>Factory_Approval__c</fullName>
    <label>Factory Approval</label>
    <referenceTo>Factory__c</referenceTo>
    <relationshipLabel>Factory Approval List</relationshipLabel>
    <relationshipName>Factory_Approval_List</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>