force-app/main/default/objects/Factory_Approvals__c/fields/Factory_Image__c.field-meta.xml
<CustomField>
    <fullName>Factory_Image__c</fullName>
    <formula>IF(!ISBLANK( Factory_Approval__r.Image_URL__c  ),IMAGE(  Factory_Approval__r.Image_URL__c  , Name , 100, 100), &quot;No Image&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Factory Image</label>
    <type>Text</type>
</CustomField>