force-app/main/default/objects/Factory_Approvals__c/fields/Port_formula__c.field-meta.xml
<CustomField>
    <fullName>Port_formula__c</fullName>
    <formula>Factory_Approval__r.Port__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Port</label>
    <type>Text</type>
</CustomField>