force-app/main/default/objects/Factory_Approvals__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Factory_Image__c</columns>
    <columns>Factory_Approval__c</columns>
    <columns>Approval_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>